--- a/video.html
+++ b/video.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>JavaScript Video Controls</title>
 	<link rel="stylesheet" type="text/css" href="css/video.css">
+	<script src="js/video.js" defer></script>
 </head>
 <body> 
 <main>
@@ -26,7 +27,7 @@
 			preload="none"
 			src="assets/marchingband.mov">
 			  
-		    <track src="captions_en.vtt" kind="captions" srclang="en" label="english_captions">	
+		    <track src="assets/band.vtt" kind="captions" srclang="en" label="english_captions">
 		  		Your browser does not support HTML5 video.
 		</video>
 		<figcaption>[The Michigan Marching Band]</figcaption>
