Fix html validation error

--- a/video.html
+++ b/video.html
@@ -18,9 +18,8 @@
 	</div>
 
 	<figure>
-
-		<video class = "video" 
-			autoplay="false" 
+		<!-- autoplay="false" is deleted, as this is a validation error	-->
+		<video class = "video"
 			width="640" 
 			height="360" 
 			id="player1" 
